[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/recipe_creator/recipe_ui.gd" type="Script" id=1]
[ext_resource path="res://scenes/recipe_creator/Glass.tscn" type="PackedScene" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )
_sections_unfolded = [ "Script", "Transform" ]

[node name="elementsList" type="VBoxContainer" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 610.0
margin_top = 100.0
margin_right = 703.0
margin_bottom = 140.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Plus" type="Button" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 493.0
margin_top = 156.0
margin_right = 553.0
margin_bottom = 202.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "+"
flat = false
align = 1

[node name="Moins" type="Button" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 493.0
margin_top = 230.0
margin_right = 553.0
margin_bottom = 276.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "-"
flat = false
align = 1

[node name="Number" type="Label" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 495.0
margin_top = 298.0
margin_right = 535.0
margin_bottom = 312.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Glass" parent="." instance=ExtResource( 2 )]
position = Vector2( 254.691, 301.868 )

[connection signal="pressed" from="Plus" to="." method="_on_Plus_pressed"]
[connection signal="pressed" from="Moins" to="." method="_on_Moins_pressed"]
[connection signal="surface_created" from="Glass" to="." method="_on_Glass_surface_created"]
[connection signal="surface_moved" from="Glass" to="." method="_on_Glass_surface_moved"]
[connection signal="surface_removed" from="Glass" to="." method="_on_Glass_surface_removed"]
